@@ -5,6 +5,7 @@ IN PROGRESS...
 + New content
 * Monster image generator moved to separate project - 'Frankenstein'
 * New star sprites from Dname
+* New planet types
 
 =====================================================
 VERSION 0.0.8
